--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,9 @@
         "illuminate/session": "^5.4",
         "php": ">=5.6"
     },
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.13"
+    },
     "autoload": {
         "psr-4": {
             "UserFrosting\\Session\\": "src"
