--- a/composer.json
+++ b/composer.json
@@ -13,14 +13,21 @@
     ],
     "require": {
         "illuminate/session": "^5.4",
+        "illuminate/support": "^5.4",
         "php": ">=5.6"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^2.13"
+        "friendsofphp/php-cs-fixer": "^2.13",
+        "phpunit/phpunit": "^5.7"
     },
     "autoload": {
         "psr-4": {
             "UserFrosting\\Session\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "UserFrosting\\Session\\Tests\\": "tests"
         }
     }
 }
