--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -30,17 +30,7 @@ jobs:
     - name: Set Laravel version
       run: composer require "illuminate/redis:${{ matrix.laravel }}" --no-update
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Execute tests (Unit and Feature tests) via PHPUnit & MySQL Env
-      if: ${{ matrix.database == 'mysql' }}
-      env:
-        DB_CONNECTION: mysql
-        DB_HOST: 127.0.0.1
-        DB_USER: laravel
-        DB_PASSWORD: password
-        DB_DATABASE: laravel
-        DB_PORT: 3306
-      run: vendor/bin/phpunit
+      run: composer install --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Execute tests via PHPUnit
       run: vendor/bin/phpunit
     - name: Upload coverage to Codecov
